@@ -17,4 +17,9 @@ https://bugreports.qt.io/
 Each of these identifiers can be entered in the bug tracker to obtain more
 information about a particular change.
 
- - This release contains only minor code improvements.
+****************************************************************************
+*                                   TIFF                                   *
+****************************************************************************
+
+ - Two security-related upstream patches has been applied to the
+   bundled libtiff
